feat Pesquisa avançada das ocorrências
